fixed gap

--- a/src/apps/content-editor/src/app/views/ItemList/SetActions/SetActions.less
+++ b/src/apps/content-editor/src/app/views/ItemList/SetActions/SetActions.less
@@ -24,8 +24,8 @@
   }
 
   .Left {
-    // flex: 1;
     display: flex;
+    gap: 8px;
     align-items: center;
     .Select {
       width: 175px;
